# RAPG-stack-app

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  package-lock.json
actix_web_service/: .env  Cargo.toml  diesel.toml
actix_web_service/migrations/2023-08-08-152623_create_users/: up.sql
actix_web_service/migrations/2023-08-08-190246_create_a_connection_between_user_and_todo/: down.sql  up.sql
actix_web_service/src/: main.rs
actix_web_service/src/controller/: default_endpoints.rs  graphql.rs  mod.rs  todo_controller.rs
actix_web_service/src/models/: todo.rs  user.rs
actix_web_service/src/repository/: database.rs  diesel_schema.rs  mod.rs  todo.rs  user.rs
actix_web_service/src/utils/: mod.rs  usize_wrapper.rs
react-native-app/: .env  app.json  babel.config.js  package-lock.json  package.json
react-native-app/app/: _layout.tsx  index.tsx
react-native-app/app/todo/: [userId].tsx  [user].tsx
react-native-app/components/: AddButton.tsx  AddObjectForm.tsx  HorizontalLine.tsx  MonoButton.tsx  ObjectForm.tsx  TodoComponent.tsx
react-native-app/constants/: Colors.ts  commonStyles.ts
react-native-app/hooks/: useObjectFormContext.tsx
react-native-app/interfaces/: EnrichedQueryResult.ts  MutateTodo.ts  MutateUser.ts  Todo.ts  User.ts  todo.ts
react-native-app/utils/: graphql_queries.ts
